--- a/index.html
+++ b/index.html
@@ -20,21 +20,10 @@
 <body>
 
     <div class="gallery d-flex align-items-center mt-5">
-        <div><i class="fa-solid fa-circle-arrow-left fa-2x pe-1"></i></div>
+        <div><i class="fa-solid fa-circle-arrow-left fa-2x pe-1" id="back"></i></div>
         <div id="carousel">
-            <img class="active" src="img/01.jpg" alt="">
-            <img src="img/02.jpg" alt="">
-            <img src="img/03.jpg" alt="">
-            <img src="img/04.jpg" alt="">
-            <img src="img/05.jpg" alt="">
-            <img src="img/06.jpg" alt="">
-            <img src="img/07.jpg" alt="">
-            <img src="img/08.jpg" alt="">
-            <img src="img/09.jpg" alt="">
-            <img src="img/10.jpg" alt="">
         </div>
-        <div><i class="fa-solid fa-circle-arrow-right fa-2x ps-1"></i></div>
-
+        <div><i class="fa-solid fa-circle-arrow-right fa-2x ps-1" id="next"></i></div>
     </div>
 
 
